Updated on the server

--- a/resources/assets/sass/_status-page.scss
+++ b/resources/assets/sass/_status-page.scss
@@ -63,6 +63,10 @@ body.status-page {
         color: $cachet_red;
     }
 
+    .text-info, .text-component-5 {
+        color: $cachet_blue;
+    }
+
     .container {
         max-width: 960px;
     }
